...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BrewingActivity">


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/doNotUseThermometerCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Don't use thermometer"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:text="Disconnected"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/redBar"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="12dp"
        android:src="@drawable/progress_gray"
...
