...
        app:srcCompat="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onAddBrewingSettingButtonClick"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBrewingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Brewing"
        app:layout_constraintBottom_toBottomOf="@+id/addBrewingStepButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
